--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-winston": "^4.0.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
