--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.3",
+    "log-timestamp": "^0.3.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
