--- a/universal_api_data/discount_apply_success.json
+++ b/universal_api_data/discount_apply_success.json
@@ -4,7 +4,7 @@
     "data": {
         "discount_code": "bolt_code",
         "description": "bolt_description",
-        "discount_type": "bolt_discount_type",
-        "discount_amount": 10000
+        "discount_type": "fixed",
+        "discount_amount": 1
     }
 }
